--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.3.2",
     "clsx": "^2.1.1",
+    "convex": "^1.23.0",
     "lucide-react": "^0.292.0",
     "next": "^14.1.0",
     "react": "^18.3.0",
