--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.14.1",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.3.2",
@@ -20,6 +21,7 @@
     "react-dom": "^18.3.0",
     "react-icons": "^5.0.1",
     "shadcn-ui": "^0.9.5",
+    "svix": "^1.63.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
