--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.3.2",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
+    "elevenlabs": "^1.56.1",
     "lucide-react": "^0.292.0",
     "next": "^14.1.0",
     "openai": "^4.93.0",
