--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.14.1",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.7",
@@ -21,6 +23,9 @@
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
     "elevenlabs": "^1.56.1",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.292.0",
     "next": "^14.1.0",
     "openai": "^4.93.0",
